...

class ActionsOfAppBar extends StatelessWidget {

  @override
  Widget build(BuildContext context) {
    return PopupMenuButton(
      key: const ValueKey('menuButton'),
        itemBuilder: (context) {
          return [
            PopupMenuItem<int>(
              value: 0,
              child: Text("Help"),
            ),
          ];
        },
        onSelected: (value) {
          if (value == 0) {
            Navigator.push(
...
                },
              ),
            );
          }
        }
      },
      child: const Text('Search'),
    );

  }
}


...
                },
                child: DetailRow(
                  icon: const Icon(
                    Icons.location_city,
                    color: Colors.grey,
                  ),
                  text: "Company",
                ),
              ),
              GestureDetector(
                onTap: () {
                  const url = 'https://www.edamam.com/terms';
                  Uri uri = Uri.parse(url);
...
                },
                child: DetailRow(
                  icon: const Icon(
                    Icons.api,
                    color: Colors.grey,
                  ),
                  text: "AppInfo",
                ),
              ),
              GestureDetector(
                onTap: () {
                  Navigator.push(
                      context,
...
                },
                child: DetailRow(
                  icon: const Icon(
                    Icons.privacy_tip,
                    color: Colors.grey,
                  ),
                  text: "Privacy",
                ),
              ),
            ],
          ),
        ),
      ),
...
