...
            padding: const EdgeInsets.only(
              top: 10,
              bottom: 5,
            ),
            child: ExpandedInfoWidget(
              info: recipe.cautions,
              title: 'Cautions',
              expandedPanel: 0,
            ),
          ),
          Padding(
            padding: const EdgeInsets.only(
              top: 10,
...
            padding: const EdgeInsets.only(
              top: 10,
              bottom: 5,
            ),
            child: ExpandedInfoWidget(
              info: recipe.totalNutrients,
              title: 'Total Nutrients',
              expandedPanel: 3,
            ),
          ),
          Padding(
            padding: const EdgeInsets.only(
              top: 10,
...
